2006-05-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.c: code cleanup, no logic changed.

	* app/widgets/gimptoolbox-color-area.c: make the very first click
	on the color area work as expected.

2006-05-10  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-mmx.c
	(gimp_composite_swap_rgba8_rgba8_rgba8_mmx): applied patch from
	Mukund that replaces remaining movntq instructions in MMX assembly
	(bug #162778).

2006-05-09  Simon Budig  <simon@gimp.org>

	* themes/Default/images/stock-color-triangle-16.png: New icon
	to reflect the corrected triangular color selector.

2006-05-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_new)
	* app/core/gimpitem.c (gimp_item_configure)
	* app/display/gimpdisplay.c (gimp_display_new): make sure IDs wrap
	correctly at G_MAXINT and skip IDs which are currently in use.

	It makes no sense to treat gimp->image_table and gimp->images
	differently, since they keep the same set of images. And it makes
	no sense to treat gimp->displays and gimp->images differently.
	Moved all container adding into the objects' constructors:

	* app/core/gimp.c (gimp_create_image): don't add the new image
	to gimp->images here...

	* app/core/gimpimage.c (gimp_image_constructor): ...but here.

	* app/core/gimp-gui.c (gimp_create_display): don't add the new
	display to gimp->displays here...

	* app/display/gimpdisplay.c (gimp_display_new): ...but here.

2006-05-09  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui-vtable.c: don't #include "pdb/gimppluginprocedure.h".

2006-05-08  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/siod/sliba.c: Insert a missing break that
	was responsible for a weird output of integer arrays.
	Untabbified.

2006-05-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): set the
	alternative button order here...

	* app/dialogs/file-open-dialog.c (file_open_dialog_new)